# socon-embedded

./: .gitignore  README.rst  plugins.py  pyproject.toml  requirements.txt  tox.ini
socon_embedded/: exceptions.py  managers.py
socon_embedded/action/: __init__.py  call.py  copy.py  move.py
socon_embedded/apps/: executor.py
socon_embedded/builder/: __init__.py  parser.py  result.py
socon_embedded/executor/: app_executor.py  task_executor.py  task_result.py
socon_embedded/management/commands/: build.py
socon_embedded/management/commands/subcommands/: from_file.py
socon_embedded/schema/: apps.py  base.py  task.py
socon_embedded/schema/tasks/: executor.py  task.py
socon_embedded/schema/tasks/action/: __init__.py  copy.py
socon_embedded/utils/: converter.py  jinja.py  loader.py  parser.py
tests/: builder.py  conftest.py  pytest.ini  test_build.py
tests/action/: __init__.py  test_call_command.py  test_copy.py  test_discover.py
tests/app_configs/: simple_app_config.yml
tests/commands/: test_build_command.py  test_from_file.py
tests/commands/datafixtures/: simple_app_config.yml  simple_app_with_task.yml
tests/executor/: test_task_executor.py  test_task_result.py
tests/management/: config.py
tests/projects/test_project/: action.py  projects.py
tests/projects/test_project/management/: config.py
tests/schema/: test_tasks.py  tests.py
tests/schema/datafixtures/: action_extra_args.yml  bad_action.yml  copy_schema.yml  multiple_valid_action.yml  no_action.yml  set_action.yml
tests/utils/: test_splitter.py
